Added DatabaseHelper Renamed RecipeActivity to CategoryPage

--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#FFAF53"
     android:orientation="vertical"
-    tools:context=".RecipeActivity">
+    tools:context=".CategoryPage">
 
     <LinearLayout
         android:layout_width="match_parent"
