--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -40,10 +40,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="0"
-                android:text="TextView"
+                android:text="Category"
                 android:textAlignment="center"
-                android:textSize="34sp"
-                tools:text="Recipes" />
+                android:textSize="34sp" />
 
         </LinearLayout>
 
@@ -87,9 +86,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="-50"
+        android:layout_weight="0"
         android:orientation="vertical">
 
         <ScrollView
