--- a/app/src/main/res/layout/activity_recipe_list_page.xml
+++ b/app/src/main/res/layout/activity_recipe_list_page.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/toplayout"
         android:orientation="horizontal">
 
@@ -86,16 +87,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="-50"
         android:orientation="vertical">
-
-        <View
-            android:id="@+id/divider3"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="?android:attr/listDivider" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -106,12 +100,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
         </ScrollView>
-
-        <View
-            android:id="@+id/divider4"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:background="?android:attr/listDivider" />
 
         <Button
             android:id="@+id/addRecipeBtn"
