--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -5,90 +5,39 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFAF53"
+    android:background="@drawable/bg"
     android:orientation="vertical"
     tools:context=".CategoryPage">
 
 
-
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/toplayout"
-        android:orientation="horizontal">
+        android:layout_weight="0">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="57dp"
-            android:layout_height="55dp"
-            android:layout_weight="-50"
-            app:srcCompat="@drawable/cookbookicon" />
+            android:id="@+id/imageView2"
+            android:layout_width="253dp"
+            android:layout_height="92dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/toplayouts" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="-50"
-            android:orientation="vertical">
+        <ImageButton
+            android:id="@+id/returntomenuBtns"
+            android:layout_width="53dp"
+            android:layout_height="52dp"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/back"
+            tools:layout_editor_absoluteY="20dp" />
 
-            <View
-                android:id="@+id/divider5"
-                android:layout_width="5dp"
-                android:layout_height="2.5dp"
-                android:background="#FFAF53" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_weight="0"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="34sp"
-                tools:text="Recipes" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <View
-                android:id="@+id/divider7"
-                android:layout_width="200dp"
-                android:layout_height="10dp"
-                android:layout_weight="-50"
-                android:background="#FFC107" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="-50"
-                android:orientation="horizontal">
-
-                <View
-                    android:id="@+id/divider9"
-                    android:layout_width="180dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="-50"
-
-                    android:background="#FFC107" />
-
-                <ImageButton
-                    android:id="@+id/returntocategoryBtns"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="-50"
-                    android:background="#FFC107"
-                    app:srcCompat="@drawable/returnbtn" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
@@ -96,20 +45,22 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/material_emphasis_medium">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:id="@+id/categoryContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:orientation="vertical">
+
+            </LinearLayout>
         </ScrollView>
 
         <Button
             android:id="@+id/addRecipeBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="Add Recipe" />
     </LinearLayout>
 
