--- a/app/src/main/res/layout/activity_recipe_list_page.xml
+++ b/app/src/main/res/layout/activity_recipe_list_page.xml
@@ -5,97 +5,41 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFAF53"
+    android:background="@drawable/bg"
     android:orientation="vertical"
-    tools:context=".CategoryPage">
+    tools:context=".RecipeListPage">
 
-    <LinearLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toplayout"
-        android:orientation="horizontal">
+        android:layout_weight="0">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="57dp"
-            android:layout_height="55dp"
-            android:layout_weight="-50"
-            app:srcCompat="@drawable/cookbookicon" />
+            android:id="@+id/imageView2"
+            android:layout_width="253dp"
+            android:layout_height="92dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/toplayouts" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="-50"
-            android:orientation="vertical">
-
-            <View
-                android:id="@+id/divider5"
-                android:layout_width="5dp"
-                android:layout_height="2.5dp"
-                android:background="#FFAF53" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_weight="0"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="34sp"
-                tools:text="Recipes" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <View
-                android:id="@+id/divider7"
-                android:layout_width="200dp"
-                android:layout_height="10dp"
-                android:layout_weight="-50"
-                android:background="#FFC107" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="-50"
-                android:orientation="horizontal">
-
-                <View
-                    android:id="@+id/divider9"
-                    android:layout_width="180dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="-50"
-
-                    android:background="#FFC107" />
-
-                <ImageButton
-                    android:id="@+id/returntocategoryBtns"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="-50"
-                    android:background="#FFC107"
-                    app:srcCompat="@drawable/returnbtn" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/returntocategoryBtns"
+            android:layout_width="53dp"
+            android:layout_height="52dp"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/back"
+            tools:layout_editor_absoluteY="20dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="-50"
         android:orientation="vertical">
-
-        <View
-            android:id="@+id/divider3"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="?android:attr/listDivider" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -107,15 +51,9 @@
                 android:orientation="vertical" />
         </ScrollView>
 
-        <View
-            android:id="@+id/divider4"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:background="?android:attr/listDivider" />
-
         <Button
             android:id="@+id/addRecipeBtn"
-            android:layout_width="match_parent"
+            android:layout_width="409dp"
             android:layout_height="wrap_content"
             android:text="Add Recipe" />
     </LinearLayout>
