Implemented category-specific recipe management, including recipe details view. - Renamed `returntocategoryBtns` to `returnToRecipeListBtn` for consistency. - Modified `RecipeListPage` to accept `selectedCategoryID`, enabling category-specific recipe display. - Refactored adding a recipe to utilize `selectedCategoryID`, and implemented recipe display. - Added long click options to recipe button to Edit/Delete. - Implemented Edit/Delete Recipe. - Added `ViewRecipePage` activity to display recipe details, including name, description, ingredients, and steps. - Updated `DatabaseHelper` to support category-specific recipe operations: `getRecipes`, `updateRecipe`, `deleteRecipe`, `getRecipeDetails`, `getRecipeIngredients`, `getRecipeSteps`. - Added `addCategoryBtn` and set text to `Add Category`. - Display category based on id. - Category cannot be added when same name. - Changed title of `showAddRecipeDialog` to `Add Recipe`. - Changed error msg. - Implemented `isCategoryAlreadyExists` method.

--- a/app/src/main/res/layout/activity_recipe_list_page.xml
+++ b/app/src/main/res/layout/activity_recipe_list_page.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#FFAF53"
     android:orientation="vertical"
-    tools:context=".CategoryPage">
+    tools:context=".RecipeListPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -74,7 +74,7 @@
                     android:background="#FFC107" />
 
                 <ImageButton
-                    android:id="@+id/returntocategoryBtns"
+                    android:id="@+id/returnToRecipeListBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="-50"
@@ -96,6 +96,7 @@
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:id="@+id/recipesContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
