--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -76,7 +76,7 @@
                     android:background="#FFC107" />
 
                 <ImageButton
-                    android:id="@+id/returntocategoryBtns"
+                    android:id="@+id/returnToRecipeListBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="-50"
@@ -106,10 +106,11 @@
         </ScrollView>
 
         <Button
-            android:id="@+id/addRecipeBtn"
+            android:id="@+id/addCategoryBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Recipe" />
+            android:text="Add Category" />
+
     </LinearLayout>
 
 </LinearLayout>
