--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -9,30 +9,31 @@
     android:orientation="vertical"
     tools:context=".CategoryPage">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0">
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="253dp"
+            android:id="@+id/topLayoutImageView"
+            android:layout_width="412dp"
             android:layout_height="92dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/toplayouts" />
 
         <ImageButton
-            android:id="@+id/returntomenuBtns"
+            android:id="@+id/returnToRecipeBtn"
             android:layout_width="53dp"
             android:layout_height="52dp"
+            android:layout_marginTop="16dp"
             android:background="#00000000"
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/back"
-            tools:layout_editor_absoluteY="20dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/back" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -61,7 +62,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Add Recipe" />
             android:text="Add Category" />
 
     </LinearLayout>
