--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/appname"
-            tools:layout_editor_absoluteY="49dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/appname" />
 
         <Button
             android:id="@+id/recipeBtn"
