Prob with the view recipe 2

--- a/app/src/main/res/layout/activity_recipe_page.xml
+++ b/app/src/main/res/layout/activity_recipe_page.xml
@@ -117,6 +117,7 @@
             android:id="@+id/addRecipeBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#c57e39"
             android:text="Add Recipe" />
     </LinearLayout>
 
