--- a/app/src/main/res/layout/activity_recipe_list_page.xml
+++ b/app/src/main/res/layout/activity_recipe_list_page.xml
@@ -56,6 +56,7 @@
         <Button
             android:id="@+id/addRecipeBtn"
             android:layout_width="409dp"
+            android:backgroundTint="#c57e39"
             android:layout_height="wrap_content"
             android:text="Add Recipe" />
     </LinearLayout>
