--- a/app/src/main/res/layout/activity_view_recipe_page.xml
+++ b/app/src/main/res/layout/activity_view_recipe_page.xml
@@ -126,6 +126,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:backgroundTint="#c57e39"
         android:text="Edit Recipe"
         android:textColor="@android:color/white" />
 
